[project]
name = "txiktxak-awtrix3"
version = "0.1.0"
description = "Retrieve TxikTxak data and send it to AWTRIX3"
author = "Richard Dally"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "protobuf~=3.20.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
